# qk

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: run_tests.yaml
examples/: 01_events_example.cpp  02_threading_example.cpp  03_traits_example.cpp  04_embedding_example.cpp
include/: common.h  qk_events.h  qk_filepath.h  qk_ipc.h
include/qk/: common.h  qk_binary.h  qk_cli.h  qk_common.h  qk_events.h  qk_filepath.h  qk_ipc.h  qk_math.h  qk_runtime.h  qk_threading.h  qk_traits.h  qk_utils.h
qk/: api.h
qk/binary/: embedding.cpp  embedding.h
qk/cli/: cli.cpp  cli.h
qk/events/: events.cpp  events.h
qk/filepath/: filepath.cpp  filepath.h
qk/ipc/: ipc.cpp  ipc.h
qk/math/: math.h  vec.h
qk/runtime/: memory.cpp  memory.h  runtime.h
qk/runtime/unix/: memory.h  process.h
qk/runtime/windows/: memory.h  process.cpp  process.h
qk/threading/: gorutines.cpp  gorutines.h
qk/traits/: traits.h  traits_extra.h
qk/utils/: incrementer.h  utils.h  utils_globals.cpp
scripts/: embedding.cmake
tests/: cli_test.cpp  embedding_test.cpp  events_test.cpp  filepath_test.cpp  filepath_test.go  ipc_test.cpp  runtime_windows.cpp  threading_test.cpp  traits_test.cpp  utils_test.cpp
tests/extra/: init_gl.c
tools/embedder/: embedder.cpp
